--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,12 @@
 CC := ccache gcc
-CFLAGS_REL := -std=c99 -Wall -pthread -Os -s 
+CFLAGS_REL := -std=c99 -Wall -pthread -Ofast -ffast-math -march=native -mtune=native -g
 CFLAGS_DBG := -std=c99 -Wall -pthread -O0 -g 
 
-CFLAGS := $(CFLAGS_REL) $(shell sdl2-config --cflags)
+CFLAGS := $(CFLAGS_REL) $(shell sdl2-config --cflags) 
 
-LDLIBS := -ljack -lm $(shell sdl2-config --libs)
+LDLIBS := -lm -ljack $(shell sdl2-config --libs)
 
-OBJS := bitset.o lfqueue.o engine.o nodes.o song.o jack_main.o autil_c.o
+OBJS := bitset.o lfqueue.o engine.o nodes.o song.o sdl_main.o autil_c.o wave_table.o blep.o
 
 .PHONY: clean test
 
